# prism-benchmark

./: README.md
NPB-CPP-cadna/NPB-OMP/: perf.data
NPB-CPP-cadna/NPB-OMP/CG/: cg.cpp
NPB-CPP-cadna/NPB-OMP/config/: make.def
NPB-CPP-cadna/NPB-SER/CG/: cg.cpp  npbparams.hpp
NPB-CPP-cadna/cadna_c-3.1.11/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
NPB-CPP-cadna/cadna_c-3.1.11/examplesC/: Makefile  Makefile.am  Makefile.in  README  ex1.c  ex1_cad.cc  ex2.c  ex2_cad.cc  ex3.cc  ex3_cad.cc  ex4.c  ex4_cad.cc  ex5.c  ex5_cad.cc  ex5_cad_opt.cc  ex6.c  ex6_cad.cc  ex7.cc  ex7_cad.cc
NPB-CPP-cadna/cadna_c-3.1.11/examplesC_mpi/: Makefile  Makefile.am  Makefile.in  README  exampleMPI1.c  exampleMPI1_cad.cc  exampleMPI1_float.c  exampleMPI1_float_cad.cc  exampleMPI2.cc  exampleMPI2_cad.cc  exampleMPI2_float.cc  exampleMPI2_float_cad.cc
NPB-CPP-cadna/cadna_c-3.1.11/examplesC_mpiomp/: Makefile  Makefile.am  Makefile.in  README  exampleMPI_OMP1.c  exampleMPI_OMP1_cad.cc
NPB-CPP-cadna/cadna_c-3.1.11/examplesC_omp/: Makefile  Makefile.am  Makefile.in  exampleOPENMP1.c  exampleOPENMP1_cad.cc
NPB-CPP-cadna/cadna_c-3.1.11/examplesFortran/: Makefile  Makefile.am  Makefile.in  ex1.f90  ex1_cad.f90  ex2.f90  ex2_cad.f90  ex3.f90  ex3_cad.f90  ex4.f90  ex4_cad.f90  ex5.f90  ex5_cad.f90  ex5_cad_opt.f90  ex6.f90  ex6_cad.f90  ex7.f90  ex7_cad.f90
NPB-CPP-cadna/cadna_c-3.1.11/examplesFortran_mpi/: Makefile  Makefile.am  Makefile.in  README  exampleMPI1Reduce_cad.f90  exampleMPI1Reduce_float_cad.f90  exampleMPI1SendRecv.f90  exampleMPI1SendRecv_cad.f90  exampleMPI1SendRecv_float.f90  exampleMPI1SendRecv_float_cad.f90
NPB-CPP-cadna/cadna_c-3.1.11/m4/: cadna_check_compiler_c_flag.m4  cadna_check_compiler_flag.m4  cadna_check_cxx_lib.m4  cadna_check_fc_compiler_flag.m4  cadna_check_openmp4.m4  cadna_check_openmp_flags.m4  cadna_check_openmp_roundingmode.m4
NPB-CPP-cadna/cadna_c-3.1.11/srcC/: Makefile  Makefile.am  Makefile.in  cadna-error.h  cadna.h  cadna_add.h  cadna_complex.cc  cadna_convert.cc  cadna_digitnumber.h  cadna_div.h  cadna_intr.cc  cadna_math.cc  cadna_math_gnu.cc  cadna_math_other.cc  cadna_mul.h  cadna_ne.h  cadna_numericalnoise.h  cadna_random.h  cadna_str.h  cadna_sub.h  cadna_to.h  cadna_type.cc
NPB-CPP-cadna/cadna_c-3.1.11/srcC/.deps/: libcadnaC_a-cadna_complex.Po  libcadnaC_a-cadna_convert.Po  libcadnaC_a-cadna_intr.Po  libcadnaC_a-cadna_math.Po  libcadnaC_a-cadna_type.Po  libcadnaCdebug_a-cadna_complex.Po  libcadnaCdebug_a-cadna_convert.Po  libcadnaCdebug_a-cadna_intr.Po  libcadnaCdebug_a-cadna_math.Po  libcadnaCdebug_a-cadna_type.Po  libcadnaOpenmpC_a-cadna_complex.Po  libcadnaOpenmpC_a-cadna_convert.Po  libcadnaOpenmpC_a-cadna_intr.Po  libcadnaOpenmpC_a-cadna_math.Po  libcadnaOpenmpC_a-cadna_type.Po  libcadnaOpenmpCdebug_a-cadna_complex.Po  libcadnaOpenmpCdebug_a-cadna_convert.Po  libcadnaOpenmpCdebug_a-cadna_intr.Po  libcadnaOpenmpCdebug_a-cadna_math.Po  libcadnaOpenmpCdebug_a-cadna_type.Po
NPB-CPP-cadna/cadna_c-3.1.11/srcC_mpi/: Makefile  Makefile.am  Makefile.in  cadna_mpi.cc  cadna_mpi.h
NPB-CPP-cadna/cadna_c-3.1.11/srcFortran/: Makefile  Makefile.am  Makefile.in  cadna.f90  cadna_add.f90  cadna_add_binding.cc  cadna_affect.f90  cadna_affect_binding.cc  cadna_array.f90  cadna_binding.cc  cadna_cmplx_add.f90  cadna_cmplx_affect.f90  cadna_cmplx_array.f90  cadna_cmplx_convert.f90  cadna_cmplx_div.f90  cadna_cmplx_eq.f90  cadna_cmplx_math.f90  cadna_cmplx_mult.f90  cadna_cmplx_ne.f90  cadna_cmplx_opp.f90  cadna_cmplx_plus.f90  cadna_cmplx_pow.f90  cadna_cmplx_sub.f90  cadna_convert.f90  cadna_convert_binding.cc  cadna_div.f90  cadna_div_binding.cc  cadna_eq.f90  cadna_eq_binding.cc  cadna_ge.f90  cadna_ge_binding.cc  cadna_gt.f90  cadna_gt_binding.cc  cadna_le.f90  cadna_le_binding.cc  cadna_lt.f90  cadna_lt_binding.cc  cadna_math.f90  cadna_math_binding.cc  cadna_mult.f90  (+15 more)
NPB-CPP-cadna/cadna_c-3.1.11/srcFortran_mpi/: Makefile  Makefile.am  Makefile.in  cadna_mpi.f90  cadna_mpi_binding.cc
NPB-CPP-cadna/cadnaizer_c/: cadnaizer
NPB-CPP-origin/NPB-SER/CG/: npbparams.hpp
NPB-CPP-prism-sr/NPB-SER-MCA/CG/: npbparams.hpp
NPB-CPP-prism-sr/NPB-SER/config/: make.def
NPB-CPP-prism-ud/NPB-OMP/CG/: npbparams.hpp
NPB-CPP-prism-ud/NPB-SER/CG/: npbparams.hpp
NPB-CPP-sr/NPB-OMP/config/: make.def
NPB-CPP-sr/NPB-SER/: perf.data
NPB-CPP-sr/NPB-SER-MCA/config/: make.def
NPB-CPP-sr/NPB-SER-MCA/sys/: setparams
NPB-CPP-sr/stochastic-rounding-evaluation/performance/: Makefile
NPB/NPB-CPP-cadna/NPB-OMP/CG/: npbparams.hpp
NPB/NPB-CPP-cadna/NPB-SER/config/: make.def
NPB/NPB-CPP-origin/NPB-OMP/sys/: setparams
NPB/NPB-CPP-origin/NPB-SER/config/: make.def
NPB/NPB-CPP-prism-ud/NPB-SER/config/: make.def
NPB/NPB-CPP-sr/NPB-SER/CG/: cg.cpp  npbparams.hpp
NPB/NPB-CPP-sr/NPB-SER/config/: make.def
NPB/NPB-CPP-sr/stochastic-rounding-evaluation/numerical_experiments/: ODE_tests.py  chop.py  euler.c  grad  grad.c  harmonic  harmonic.c
NPB/NPB-CPP-sr/stochastic-rounding-evaluation/performance/: Makefile  stochrnddw.cpp  stochrnddw.hpp  stochrnddw_ar.cpp  stochrnddw_rn.cpp  stochrndhp.cpp
NPB/libs/: fastflow.tar.xz  tbb-2020.1.tar.xz
harmonic/: Makefile  run.sh
harmonic/scripts/: plot.py
harmonic/src/: harmonic.c  harmonic_cadna.c  harmonic_sr.cpp
