SUBDIRS = srcC  srcC_mpi srcFortran srcFortran_mpi 
  

EXTRA_DIST= \
examplesC/ex1.c \
examplesC/ex1_cad.cc \
examplesC/ex2.c \
examplesC/ex2_cad.cc \
examplesC/ex3.cc \
examplesC/ex3_cad.cc \
examplesC/ex4.c \
examplesC/ex4_cad.cc \
examplesC/ex5.c \
examplesC/ex5_cad.cc \
examplesC/ex5_cad_opt.cc \
examplesC/ex6.c \
examplesC/ex6_cad.cc \
examplesC/ex7.cc \
examplesC/ex7_cad.cc \
examplesC/Makefile.in\
examplesC/Makefile.am\
examplesC_mpi/Makefile.am \
examplesC_mpi/Makefile.in \
examplesC_mpi/exampleMPI1.c \
examplesC_mpi/exampleMPI1_cad.cc \
examplesC_mpi/exampleMPI1_float.c \
examplesC_mpi/exampleMPI1_float_cad.cc \
examplesC_mpi/exampleMPI2.cc \
examplesC_mpi/exampleMPI2_cad.cc \
examplesC_mpi/exampleMPI2_float.cc \
examplesC_mpi/exampleMPI2_float_cad.cc \
examplesC_mpi/Makefile.am\
examplesC_mpi/Makefile.in\
examplesC_mpi/exampleMPI1_cad.cc \
examplesC_mpi/exampleMPI1.c \
examplesC_mpi/exampleMPI2_cad.cc \
examplesC_mpi/exampleMPI2.cc \
examplesC_mpi/README \
examplesC_omp/Makefile.am\
examplesC_omp/Makefile.in \
examplesC_omp/exampleOPENMP1_cad.cc \
examplesC_omp/exampleOPENMP1.c \
examplesC_mpiomp/Makefile.am \
examplesC_mpiomp/Makefile.in \
examplesC_mpiomp/exampleMPI_OMP1.c \
examplesC_mpiomp/exampleMPI_OMP1_cad.cc \
examplesC_mpiomp/README \
examplesFortran/Makefile.in \
examplesFortran/Makefile.am \
examplesFortran/ex1.f90	\
examplesFortran/ex3_cad.f90 \
examplesFortran/ex5_cad_opt.f90 \
examplesFortran/ex1_cad.f90 	\
examplesFortran/ex4.f90		\
examplesFortran/ex6.f90 \
examplesFortran/ex2.f90		\
examplesFortran/ex4_cad.f90	\
examplesFortran/ex6_cad.f90\
examplesFortran/ex2_cad.f90	\
examplesFortran/ex5.f90		\
examplesFortran/ex7.f90 \
examplesFortran/ex3.f90		\
examplesFortran/ex5_cad.f90	\
examplesFortran/ex7_cad.f90 \
examplesFortran_mpi/Makefile.am \
examplesFortran_mpi/Makefile.in  \
examplesFortran_mpi/exampleMPI1Reduce_cad.f90 \
examplesFortran_mpi/exampleMPI1Reduce_float_cad.f90 \
examplesFortran_mpi/exampleMPI1SendRecv.f90  \
examplesFortran_mpi/exampleMPI1SendRecv_cad.f90 \
examplesFortran_mpi/exampleMPI1SendRecv_float.f90  \
examplesFortran_mpi/exampleMPI1SendRecv_float_cad.f90 \
doc/ug_cadna_C.pdf \
doc/ug_cadna_Fortran.pdf \
./examplesC/README \
./examplesFortran/README \
./examplesFortran_mpi/README \
./examplesC_mpiomp/README \
./examplesC_mpi/README 


CLEANFILES = lib/* include/*
